fix: make operation normalization java compatible